# castengine_cast_framework

./: BUILD.gn  NOTICE  README.en.md  README.md  README_zh.md  bundle.json  cast_engine.gni  hisysevent.yaml
client/: BUILD.gn
client/include/: cast_engine_service_load_callback.h  cast_service_listener_impl_stub.h  cast_session.h  cast_session_impl_proxy.h  cast_session_listener_impl_stub.h  cast_session_manager_adaptor.h  cast_session_manager_service_proxy.h  mirror_player.h  mirror_player_impl_proxy.h  stream_player.h  stream_player_impl_proxy.h  stream_player_listener_impl_stub.h
client/src/: cast_engine_service_load_callback.cpp  cast_service_listener_impl_stub.cpp  cast_session.cpp  cast_session_impl_proxy.cpp  cast_session_listener_impl_stub.cpp  cast_session_manager.cpp  cast_session_manager_adaptor.cpp  cast_session_manager_service_proxy.cpp  mirror_player.cpp  mirror_player_impl_proxy.cpp  stream_player.cpp  stream_player_impl_proxy.cpp  stream_player_listener_impl_stub.cpp
common/: BUILD.gn
common/include/private/: cast_engine_common_helper.h  cast_engine_dfx.h  cast_engine_log.h  cast_meta_node_constant.h  cast_service_common.h  cast_stub_helper.h  connection_manager_listener.h  i_cast_service_listener_impl.h  i_cast_session_impl.h  i_cast_session_listener_impl.h  i_cast_session_manager_service.h  i_mirror_player_impl.h  i_stream_player_impl.h  i_stream_player_ipc.h  i_stream_player_listener_impl.h  radar_constants.h
common/src/: cast_engine_common_helper.cpp  cast_engine_dfx.cpp
etc/init/: BUILD.gn  cast_engine_service.cfg
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/include/: cast_data_source.h  cast_engine_common.h  cast_engine_errors.h  cast_session_manager.h  cast_shared_memory.h  cast_shared_memory_base.h  cast_shared_memory_ipc.h  i_cast_session.h  i_cast_session_manager_adaptor.h  i_cast_session_manager_listener.h  i_mirror_player.h  i_stream_player.h  oh_remote_control_event.h
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/include/: napi_async_work.h  napi_callback.h  napi_cast_session.h  napi_cast_session_listener.h  napi_cast_session_manager.h  napi_cast_session_manager_listener.h  napi_castengine_enum.h  napi_castengine_utils.h  napi_errors.h  napi_mirror_player.h  napi_stream_player.h  napi_stream_player_listener.h
interfaces/kits/js/src/: napi_async_work.cpp  napi_callback.cpp  napi_cast_session.cpp  napi_cast_session_listener.cpp  napi_cast_session_manager.cpp  napi_cast_session_manager_listener.cpp  napi_castengine_enum.cpp  napi_castengine_utils.cpp  napi_mirror_player.cpp  napi_stream_player.cpp  napi_stream_player_listener.cpp  native_module.cpp
sa_profile/: 5526.json  65546.json  BUILD.gn
service/: BUILD.gn
service/include/: cast_service_listener_impl_proxy.h  cast_session_manager_service.h  cast_session_manager_service_stub.h
service/src/: cast_service_listener_impl_proxy.cpp  cast_session_manager_service.cpp  cast_session_manager_service_stub.cpp
service/src/device_manager/: BUILD.gn
service/src/device_manager/include/: cast_device_data_manager.h  connection_manager.h  connection_manager_listener.h  discovery_manager.h
service/src/device_manager/src/: cast_device_data_manager.cpp  connection_manager.cpp  discovery_manager.cpp
service/src/session/: BUILD.gn
service/src/session/include/: cast_session_common.h  cast_session_enums.h  cast_session_impl.h  cast_session_impl_class.h  cast_session_impl_stub.h  cast_session_listener_impl_proxy.h
service/src/session/src/: cast_session_impl.cpp  cast_session_impl_stub.cpp  cast_session_listener_impl_proxy.cpp  cast_session_listeners.cpp  cast_session_state.cpp
service/src/session/src/channel/: BUILD.gn
service/src/session/src/channel/include/: channel.h  channel_info.h  channel_listener.h  channel_manager.h  channel_manager_listener.h  channel_request.h  connection.h  connection_listener.h
service/src/session/src/channel/src/: channel_manager.cpp
service/src/session/src/channel/src/softbus/: softbus_connection.cpp  softbus_connection.h  softbus_wrapper.cpp  softbus_wrapper.h
service/src/session/src/channel/src/tcp/: tcp_connection.cpp  tcp_connection.h  tcp_socket.cpp  tcp_socket.h
service/src/session/src/mirror/: BUILD.gn
service/src/session/src/mirror/include/: mirror_player_impl.h  mirror_player_impl_stub.h
service/src/session/src/mirror/src/: mirror_player_impl.cpp  mirror_player_impl_stub.cpp
service/src/session/src/rtsp/: BUILD.gn
service/src/session/src/rtsp/include/: i_rtsp_controller.h  rtsp_basetype.h  rtsp_listener.h  rtsp_param_info.h
service/src/session/src/rtsp/src/: rtsp_channel_manager.cpp  rtsp_channel_manager.h  rtsp_controller.cpp  rtsp_controller.h  rtsp_listener_inner.h  rtsp_package.cpp  rtsp_package.h  rtsp_param_info.cpp  rtsp_parse.cpp  rtsp_parse.h
service/src/session/src/stream/: BUILD.gn
service/src/session/src/stream/include/: cast_stream_common.h  cast_stream_manager_client.h  cast_stream_manager_server.h  i_cast_stream_listener.h  i_cast_stream_manager.h  i_cast_stream_manager_client.h  i_cast_stream_manager_server.h
service/src/session/src/stream/src/: cast_stream_manager_client.cpp  cast_stream_manager_server.cpp  i_cast_stream_manager.cpp
service/src/session/src/stream/src/local/include/: cast_local_file_channel_client.h  cast_local_file_channel_server.h  i_cast_local_file_channel.h  i_data_listener.h  local_data_source.h
service/src/session/src/stream/src/local/src/: cast_local_file_channel_client.cpp  cast_local_file_channel_common.cpp  cast_local_file_channel_common.h  cast_local_file_channel_server.cpp  local_data_source.cpp
service/src/session/src/stream/src/player/include/: cast_stream_player.h  cast_stream_player_common.h  cast_stream_player_utils.h  (+5 more)
service/src/session/src/utils/: BUILD.gn
service/src/session/src/utils/include/: cast_timer.h  encrypt_decrypt.h  handler.h  message.h  permission.h  state_machine.h  timer.h  utils.h
service/src/session/src/utils/src/: cast_timer.cpp  encrypt_decrypt.cpp  handler.cpp  message.cpp  permission.cpp  state_machine.cpp  timer.cpp  utils.cpp
(+23 files in other folders)
