# Copyright (c) Huawei Technologies Co., Ltd. 2022-2022. All rights reserved.

config("cast_engine_default_config") {
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-shadow",
    "-Wno-unused-parameter",
    "-Wno-missing-field-initializers",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-fvisibility-inlines-hidden"
  ]
  cflags_cc = cflags
  ldflags = [ "-Werror" ]
}
