# Copyright (c) Huawei Technologies Co., Ltd. 2022-2022. All rights reserved.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

cast_engine_root = get_path_info(".", "abspath")
cast_engine_client = "$cast_engine_root/client"
cast_engine_common = "$cast_engine_root/common"
cast_engine_interfaces = "$cast_engine_root/interfaces"
cast_engine_service = "$cast_engine_root/service"

graphic_2d_path = "//foundation/graphic/graphic_2d"

build_flags = [ "-Werror" ]
