# Copyright (C) 2023-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

cast_engine_root = get_path_info(".", "abspath")
cast_engine_client = "$cast_engine_root/client"
cast_engine_common = "$cast_engine_root/common"
cast_engine_interfaces = "$cast_engine_root/interfaces"
cast_engine_service = "$cast_engine_root/service"

graphic_2d_path = "//foundation/graphic/graphic_2d"

build_flags = [ "-Werror" ]
