# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_engine_common_private_config") {
  include_dirs = [ "include/private" ]
}

ohos_static_library("cast_engine_common_sources") {
  sources = [
    "src/cast_engine_common_helper.cpp",
    "src/cast_engine_dfx.cpp",
  ]

  configs = [
    ":cast_engine_common_private_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  include_dirs = [
    "//third_party/json/single_include/nlohmann",
  ]

  public_configs = [
    ":cast_engine_common_private_config",
    "${cast_engine_interfaces}/inner_api:cast_interfaces_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
