# Copyright (c) Huawei Technologies Co., Ltd. 2022-2022. All rights reserved.

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_engine_common_private_config") {
  include_dirs = [ "include/private" ]
}

ohos_static_library("cast_engine_common_sources") {
  sources = [
    "src/cast_engine_common_helper.cpp",
    "src/cast_engine_dfx.cpp",
  ]

  configs = [
    ":cast_engine_common_private_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  include_dirs = [
    "//third_party/json/single_include/nlohmann",
  ]

  public_configs = [
    ":cast_engine_common_private_config",
    "${cast_engine_interfaces}/inner_api:cast_interfaces_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "image_framework:image_native",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
