# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#

import("//build/ohos/sa_profile/sa_profile.gni")

ohos_sa_profile("cast_engine_sa_profile") {
  sources = [ "5526.json" ]
  part_name = "cast_engine"
}
