# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#

import("//build/ohos.gni")

ohos_prebuilt_etc("cast_engine_service.cfg") {
  source = "cast_engine_service.cfg"
  relative_install_dir = "init"
  subsystem_name = "castplus"
  part_name = "cast_engine"
}
