# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_interfaces_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("cast_engine_client") {
  configs = [
    ":cast_interfaces_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  public_configs = [ ":cast_interfaces_config" ]

  deps = [
    "${cast_engine_client}:cast_client_inner",
    "${cast_engine_common}:cast_engine_common_sources",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
