# Copyright (c) Huawei Technologies Co., Ltd. 2022-2022. All rights reserved.

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_interfaces_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("cast_engine_client") {
  configs = [
    ":cast_interfaces_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  public_configs = [ ":cast_interfaces_config" ]

  deps = [
    "${cast_engine_client}:cast_client_inner",
    "${cast_engine_common}:cast_engine_common_sources",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "image_framework:image_native",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
