# Copyright (C) 2023-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_config") {
  include_dirs = [
    "include",
    "${cast_engine_interfaces}/inner_api:cast_interfaces_config"
  ]
}

ohos_shared_library("cast") {
  sources = [
    "src/napi_cast_session.cpp",
    "src/napi_cast_session_listener.cpp",
    "src/napi_cast_session_manager.cpp",
    "src/napi_cast_session_manager_listener.cpp",
    "src/napi_castengine_utils.cpp",
    "src/native_module.cpp",
    "src/napi_mirror_player.cpp",
    "src/napi_stream_player.cpp",
    "src/napi_stream_player_listener.cpp",
    "src/napi_callback.cpp",
    "src/napi_async_work.cpp",
    "src/napi_castengine_enum.cpp"
  ]

  configs = [
    ":cast_config",
    "${cast_engine_root}:cast_engine_default_config"
  ]

  deps = [
    "${cast_engine_common}:cast_engine_common_sources",
    "${cast_engine_interfaces}/inner_api:cast_engine_client",
  ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "image_framework:image",
    "image_framework:image_native",
  ]

  relative_install_dir = "module"
  subsystem_name = "castplus"
  part_name = "cast_engine"
  sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
  }
  branch_protector_ret = "pac_ret"
}
