# Copyright (c) Huawei Technologies Co., Ltd. 2022-2022. All rights reserved.

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_discovery_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("cast_discovery") {
  sources = [
    "src/cast_device_data_manager.cpp",
    "src/connection_manager.cpp",
    "src/discovery_manager.cpp",
  ]

  configs = [
    ":cast_discovery_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  include_dirs = [
    "${cast_engine_interfaces}/inner_api/include",
    "${cast_engine_service}/src/session/src/utils/include",
    "//third_party/json/single_include/nlohmann",
  ]

  public_configs = [ ":cast_discovery_config" ]

  deps = [
   "${cast_engine_common}:cast_engine_common_sources",
   "${cast_engine_service}/src/session/src/utils:cast_session_utils",
   "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "eventhandler:libeventhandler",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
