# Copyright (C) 2023-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_session_utils_config") {
  include_dirs = [
    "include",
  ]
}

ohos_static_library("cast_session_utils") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "src/cast_timer.cpp",
    "src/encrypt_decrypt.cpp",
    "src/handler.cpp",
    "src/message.cpp",
    "src/permission.cpp",
    "src/state_machine.cpp",
    "src/utils.cpp",
  ]

  configs = [
    ":cast_session_utils_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  public_configs = [ ":cast_session_utils_config" ]

  deps = [
    "${cast_engine_common}:cast_engine_common_sources",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "core_service:tel_core_service_api",
    "glib:glib",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "power_manager:powermgr_client",
    "samgr:samgr_proxy",
    "state_registry:tel_state_registry_api",
    "wifi:wifi_sdk",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
